# herdr-lazy

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  herdr-plugin.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  plugin-suggestion.yml
.github/workflows/: ci.yml  release.yml
scripts/: fetch-or-build.sh  open-manage-pane.sh  release.sh
src/: browse.rs  github.rs  json.rs  main.rs  registry.rs  ui.rs
