[package]
name = "herdr-lazy"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Be lazy: a curated, batteries-included plugin distro & manager for herdr"
license = "MIT"
repository = "https://github.com/natori-hrj/herdr-lazy"
homepage = "https://github.com/natori-hrj/herdr-lazy"
readme = "README.md"
keywords = ["herdr", "plugin-manager", "tui", "lockfile", "distro"]
categories = ["command-line-utilities", "development-tools"]

[profile.release]
strip = true
lto = "thin"

[[bin]]
name = "herdr-lazy"
path = "src/main.rs"

# The manager itself is orchestration (shelling out to the herdr CLI) and stays std-only.
# The one exception is the manage UI: std cannot put a terminal into raw mode, so a pane
# TUI is impossible without help.
#
# crossterm alone, not ratatui. The UI is a scrolling list with a status column — ratatui's
# value is layout and widget composition, which this does not use, and it costs 70 crates
# against crossterm's 19. crossterm is also ratatui's own backend, so if the UI ever outgrows
# hand-drawing, ratatui layers on top rather than replacing anything.
[dependencies]
crossterm = { version = "0.29", default-features = false, features = ["events"] }
